2006-05-21 [colin]	2.2.0cvs43

	* src/procmsg.c
	* src/summaryview.c
		More timing possibilities... For next time I have 
		to find out how the hell some 3GHz computer takes
		one minute to open a 30k folder...

2006-05-21 [colin]	2.2.0cvs42

	* manual/pl/advanced.xml
	* manual/pl/faq.xml
	* manual/pl/glossary.xml
	* manual/pl/handling.xml
	* manual/pl/intro.xml
	* manual/pl/plugins.xml
	* manual/pl/sylpheed-claws-manual.xml
		Polish manual updated by Pawel

2006-05-20 [colin]

	* 2.3.0-rc3 released

2006-05-20 [colin]	2.2.0cvs41

	* src/imap.c
		Fix -rc2 problems:
		- remove cache of moved messages from original folder
		- apply new flags to messages even if they aren't appliable
		  via IMAP.

2006-05-20 [colin]

	* 2.3.0-rc2 released

2006-05-19 [colin]	2.2.0cvs40

	* src/imap.c
		Don't issue SELECT in imap_change_flags
		before having checked that we indeed have
		some flags to change. MSG_POSTFILTERED for
		example can't be used on IMAP.
		Fixes bug #955 (copying messages between 
		imap folders is extremely slow), which was
		a regression.

2006-05-19 [colin]	2.2.0cvs39

	* src/folder.c
	* src/folder.h
	* src/folderview.c
		Try to fix bug #830 (Some unread messages 
		get marked read in IMAP inbox):
		- Prevent scanning a folder if it's being 
		  opened via the GUI
		- Postpone opening via the GUI of a folder
		  currently scanned.


2006-05-19 [wwp]	2.2.0cvs38

	* manual/advanced.xml
		fix English+typo (thanks to Paul).

2006-05-19 [wwp]	2.2.0cvs37

	* manual/advanced.xml
	* manual/fr/advanced.xml
	* src/gtk/logwindow.c
	* src/prefs_common.c
	* src/prefs_common.h
		added hidden prefs to allow customization of colors used in
		protocol log window (useful for dark gtk+ themes).

2006-05-19 [wwp]	2.2.0cvs36

	* ChangeLog
		fix an old erroneous changelog entry (thanks to Fabien Vantard).

2006-05-19 [paul]	2.2.0cvs35

	* src/textview.c
		make Reply-To fully clickable
	* src/gtk/logwindow.c
		more colouring (SMTP ESMTP)
	Both patches by Pawel Pekala
